--- a/css/main.css
+++ b/css/main.css
@@ -172,14 +172,35 @@ b {
     padding: 30px 10px 30px 10px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    align-items: center;
 }
 
 .home-image {
     padding: 10px 10px 10px 10px;
+    text-align: center;
     width: 80%;
+    min-width: 161px;
+}
+
+.home-image p {
+    font-family: Gotham-Book;
+    color: black;
+    font-size: 1rem;
+    margin-bottom: unset;
+}
+
+.home-image h3 {
+    font-family: Gotham-Bold;
+    color: #02a7d4;
+    font-size: 2rem;
+}
+
+.home-image img {
+    height: 141px;
+    margin-bottom: 10px;
+
 }
 
 .contact-box {
@@ -216,7 +237,7 @@ b {
 }
 
 .contact {
-    background: #273a43;
+    background: #02a7d4;
     padding: 30px 0;
     color: #fff;
 }
@@ -441,7 +462,6 @@ b {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    background: #273a43;
     padding: 30px 0;
     color: #fff;
     display: flex;
@@ -459,7 +479,7 @@ b {
 }
 
 .footer-background {
-    background: #172227;
+    background: #434f58;
     text-align: left;
     font-size: .687rem;
     padding: 20px 0;
@@ -609,6 +629,10 @@ b {
         padding: 40px 20px 40px 20px;
     }
 
+    .home-image {
+        width: 50%;
+    }
+
     .our-team-content {
         flex-direction: row;
     }
@@ -677,6 +701,14 @@ b {
         align-self: flex-start;
         margin-left: unset;
         margin-right: unset;
+    }
+
+    .home-image {
+        width: 25%;
+    }
+
+    .home-image h3 {
+        font-size: 1.5rem;
     }
 
     .contact-page-box {
@@ -759,6 +791,10 @@ b {
 
     .content-block {
         width: 70%;
+    }
+
+    .home-image h3 {
+        font-size: 1.75rem;
     }
 
     .contact {
