--- a/css/main.css
+++ b/css/main.css
@@ -669,7 +669,7 @@ b {
     }
 
     .our-team-image-column img {
-        width: unset;
+        width: 134px;
         padding-bottom: unset;
     }
 
