--- a/css/main.css
+++ b/css/main.css
@@ -652,9 +652,17 @@ b {
     margin-left: auto;
     margin-right: auto;
     align-self: flex-start;
-    border-bottom: 2px solid #7c7c7c;
+    width: 80%;
+    border-bottom: 2px solid #f7931c;
     flex-direction: column;
 }
+
+.navbar-icon {
+    position: absolute; 
+    height: 40px; 
+    bottom: -20px; 
+    right: 0;
+  }
 
 .navbar-brand {
     align-self: center;
