--- a/css/main.css
+++ b/css/main.css
@@ -652,16 +652,18 @@ b {
     margin-left: auto;
     margin-right: auto;
     align-self: flex-start;
-    width: 80%;
-    border-bottom: 2px solid #f7931c;
     flex-direction: column;
 }
 
+.navbar-bottom {
+    width: 96%;
+    border-bottom: 2px solid #f7931c;
+}
 .navbar-icon {
-    position: absolute; 
+    position: inherit; 
     height: 40px; 
-    bottom: -20px; 
-    right: 0;
+    bottom: -16.5px; 
+    right: 3px;
   }
 
 .navbar-brand {
