--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,23 @@ b {
 .banner-homepage {
     background-image: url("../images/Home-Header-Image.jpg");
 }
+.banner-about {
+    background-image: url("../images/About-Us-Header-Image.jpg");
+}
+.banner-product {
+    background-image: url("../images/Prod_Serve-Header.jpg");
+}
+.banner-operations {
+    background-image: url("../images/Operations-Page-Header.jpg");
+}
+
+.banner-contactus {
+    background-image: url("../images/Contact-Us-Header.jpg");
+}
+
+.banner-news {
+    background-image: url("../images/News-_-Media-Header.jpg");
+}
 
 .banner-history {
     background-image: url("../images/banner-turbine.png");
@@ -135,6 +152,18 @@ b {
     margin-bottom: 20px;
     text-align: center;
     font-size: 1.3rem;
+}
+
+.environment-text {
+    margin-bottom: 20px;
+}
+
+.environment-header h1 {
+    color: #f78c0d;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 .btn {
@@ -326,8 +355,30 @@ b {
     font-family: Gotham-Bold;
 }
 
+.text-column h5 {
+    color: #f78c0d;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    text-align: justify;
+    font-family: Gotham-Bold;
+}
+
+.chemistry-header h1 {
+    color: #ec1319;
+
+}
+
+.chemistry-header h3 {
+    color: #f78c0d;
+}
+
+.news-header h1 {
+    color: #ec1319;
+
+}
+
 .contact {
-    background: #0091cc;
+    background: #57585c;
     padding: 30px 0;
     color: #fff;
 }
@@ -601,22 +652,19 @@ b {
     margin-left: auto;
     margin-right: auto;
     align-self: flex-start;
-    border-bottom: 2px solid #7c7c7c;
     flex-direction: column;
 }
 
-.navbar-brand {
-    align-self: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.navbar-bottom {
+    width: 96%;
+    border-bottom: 2px solid #f7931c;
 }
-
-.navbar-nav {
-    flex-direction: row;
-}
+.navbar-icon {
+    position: inherit; 
+    height: 40px; 
+    bottom: -16.5px; 
+    right: 3px;
+  }
 
 .navbar-logo {
     width: 80%;
@@ -710,7 +758,7 @@ b {
     }
 
     .dropdown-menu {
-        width: 125px;
+        width: 150px;
     }
 
     .banner-text h1 {
@@ -753,7 +801,7 @@ b {
     }
 
     .our-team-image-column img {
-        width: 134px;
+        width: 125px;
         padding-bottom: unset;
     }
 
@@ -809,7 +857,7 @@ b {
     }
 
     .btn {
-        width: 125px;
+        width: 150px;
         font-size: 0.8rem;
     }
 
