--- a/css/main.css
+++ b/css/main.css
@@ -227,8 +227,22 @@ b {
     flex-direction: column;
 }
 
+.our-team-text-column {
+    display: inline-block;
+    padding-bottom: 20px;
+}
+
+.our-team-content .our-team-text-img {
+    width: 100px;
+    float: left;
+    margin-right: 15px;
+    padding: unset;
+}
+
 .our-team-image-column {
+    display: none;
     text-align: center;
+
 }
 
 .our-team-image-column img {
@@ -796,21 +810,8 @@ b {
         width: 50%;
     }
 
-    .our-team-content {
-        flex-direction: row;
-    }
-
-    .our-team-image-column img {
-        width: 125px;
-        padding-bottom: unset;
-    }
-
-    .our-team-image-column {
-        width: 15%;
-    }
-
-    .our-team-text-column {
-        width: 85%;
+    .our-team-content .our-team-text-img {
+        width: 140px;
     }
 
     .text-column {
@@ -933,6 +934,29 @@ b {
 
     .history {
         padding: 30px 0 30px 0;
+    }
+
+    .our-team-content {
+        flex-direction: row;
+    }
+
+    .our-team-text-column {
+        width: 85%;
+    }
+
+    .our-team-content .our-team-text-img {
+        display: none;
+    }
+
+    .our-team-image-column {
+        display: unset;
+        padding: 0 0 30px 0;
+        width: max(160px, 15%);
+    }
+
+    .our-team-image-column img {
+        width: 125px;
+        padding-bottom: unset;
     }
 
     .text-column h1 {
