--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,37 @@
     background-color: white;
 }
 
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    right: 0;
+    background-color: #132540;
+    /*background-color: #111;*/
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+}
+
+.page-blocker {
+    z-index: 999;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    background: rgba(0,0,0,.3);
+}
+
+.sidebar-menu {
+    display: block;
+    padding: 10px 30px 10px 30px;
+}
+
 b {
     font-family: Gotham-Bold;
 }
@@ -692,7 +723,7 @@ b {
     margin-left: auto;
     margin-right: auto;
     align-self: flex-start;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .navbar-bottom {
@@ -725,8 +756,13 @@ b {
         font-size: 1.4em;
     }
 
+    .navbar-brand {
+        display: none;
+    }
     .navbar {
         width: 95%;
+        flex-direction: column;
+        align-items: flex-end;
     }
 
     .navbar-logo {
@@ -792,17 +828,17 @@ b {
         height: 100%;
     }
 
-    .btn {
-        width: 100px;
-        font-size: 0.7rem;
-    }
+    /*.btn {*/
+    /*    width: 100px;*/
+    /*    font-size: 0.7rem;*/
+    /*}*/
 
     .dropdown-menu {
         width: 100%;
     }
 
     .banner-text h1 {
-        font-size: 2.187rem;
+        font-size: 1.94rem;
     }
 
     .banner-text h3 {
@@ -906,6 +942,10 @@ b {
 
     li .btn {
         width: unset;
+    }
+
+    .sidebar-menu {
+        display: none;
     }
 
     .navbar-expand-lg .navbar-nav .nav-link {
