--- a/css/main.css
+++ b/css/main.css
@@ -468,6 +468,72 @@ b {
     color: #ec1319;
 }
 
+.slide-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.prev, .next {
+    cursor: pointer;
+    width: auto;
+    margin-top: -22px;
+    padding: 30% 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.banner-button {
+    height: 400px;
+    margin-top: auto;
+    margin-bottom: auto;
+    z-index: 10;
+    background: none;
+    color: white;
+    padding-top: 190px;
+    padding-bottom: 190px;
+}
+
+.event-button {
+    height: 350px;
+    padding-top: 165px;
+    padding-bottom: 165px;
+}
+
+.slide-container .prev {
+    margin-right: -42px;
+    color: white;
+}
+
+.slide-container .next {
+    margin-left: -42px;
+    color: white;
+}
+
+.event-slide {
+    width: 350px;
+}
+
+/* The dots/bullets/indicators */
+.dot, .banner-dot, .event-dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover, .banner-dot:hover, .event-dot:hover {
+    background-color: #717171;
+}
+
 .contact {
     background: #57585c;
     padding: 30px 0;
