--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,15 @@ b {
     margin-bottom: 17px;
 }
 
+.bold-link {
+    text-decoration: none;
+    color: black;
+}
+
+.bold-link:hover, :checked {
+  color: rgba(0,0,0, .6);
+}
+
 .recent-block .icon {
     min-width: 50px;
     height: 50px;
